# xdemo

./: .gitignore  README.md  setup.py  ubuntu-requirements.txt
develtools/: stopallscreen.sh
examples/systems/basic-example/: CMakeLists.txt  environment-darwin.sh.in  environment-posix.sh.in  environment-win.bat.in  linux-example-finishtrigger.yaml  linux-example-infinite.yaml  linux-example.yaml  posix-example-finishtrigger.yaml  posix-example-infinite.yaml  posix-example-quick.yaml  posix-example.yaml
examples/systems/basic-example/components/: component_calendar.yaml  component_cat.yaml  component_gedit.yaml  component_gnome-calc.yaml  component_help.yaml  component_ifconfig.yaml  component_lsla.yaml  component_top.yaml  component_uname.yaml  component_xeyes.yaml  component_xterm.yaml
examples/systems/basic-example/components/calc/: component_gnome-calc.yaml  posix.sh
examples/systems/basic-example/components/calendar/: component_calendar.yaml  posix.sh
examples/systems/basic-example/components/cat/: component_cat.yaml  posix.sh
examples/systems/basic-example/components/echo/: component_echo.yaml  posix.sh
examples/systems/basic-example/components/gedit/: component_gedit.yaml  posix.sh
examples/systems/basic-example/components/help/: component_help.yaml  posix.sh  win.bat
examples/systems/basic-example/components/ifconfig/: component_ifconfig.yaml  posix.sh
examples/systems/basic-example/components/lsla/: component_lsla.yaml  darwin.sh  posix.sh
examples/systems/basic-example/groups/: group_tools.yaml  group_visualization.yaml
(+41 files in other folders)
